// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateScrollCanvas should calculate new scroll state correctly 1`] = `
Object {
  "canvasTimeEnd": 1540720800000,
  "canvasTimeStart": 1540461600000,
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540540000000,
            "collisionWidth": 6803877,
            "height": 22.5,
            "left": 907.4074074074074,
            "stack": true,
            "top": 3.75,
            "width": 78.74857638888886,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 824.074074074074,
            "stack": true,
            "top": 33.75,
            "width": 245.4152430555556,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 1032.4074074074074,
            "stack": true,
            "top": 3.75,
            "width": 287.08190972222224,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 1254.6296296296296,
            "stack": true,
            "top": 33.75,
            "width": 172.1749884259259,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 1833.3333333333333,
            "stack": true,
            "top": 3.75,
            "width": 236.08273148148123,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540546803877,
          "group": "1",
          "id": "0",
          "start_time": 1540540000000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 2250,
            "stack": true,
            "top": 3.75,
            "width": 236.08273148148146,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540546803877,
      "group": "1",
      "id": "0",
      "start_time": 1540540000000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
  "visibleTimeEnd": 1540634400000,
  "visibleTimeStart": 1540548000000,
}
`;

exports[`calculateScrollCanvas should calculate new state if zoom changed correctly 1`] = `
Object {
  "canvasTimeEnd": 1540681200000,
  "canvasTimeStart": 1540411200000,
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540540000000,
            "collisionWidth": 6803877,
            "height": 22.5,
            "left": 1431.111111111111,
            "stack": true,
            "top": 3.75,
            "width": 75.59863333333351,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 1351.111111111111,
            "stack": true,
            "top": 33.75,
            "width": 235.5986333333335,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 1551.111111111111,
            "stack": true,
            "top": 3.75,
            "width": 275.5986333333335,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 1764.4444444444446,
            "stack": true,
            "top": 33.75,
            "width": 165.28798888888878,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 2320,
            "stack": true,
            "top": 3.75,
            "width": 226.6394222222225,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540546803877,
          "group": "1",
          "id": "0",
          "start_time": 1540540000000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 2720,
            "stack": true,
            "top": 3.75,
            "width": 226.6394222222225,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540546803877,
      "group": "1",
      "id": "0",
      "start_time": 1540540000000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
  "visibleTimeEnd": 1540591200000,
  "visibleTimeStart": 1540501200000,
}
`;
